--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "express-session": "~1.0.0"
   }
 }
